# mlflow-assist

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: getting-started.md
examples/notebooks/: 00_complete_beginner_guide.ipynb  01_automl_quickstart.ipynb  02_llm_chains.ipynb  04_train_custom_agent.ipynb  05_advanced_agent_training.ipynb
mlflow_assist/advanced/: automl.py  distributed.py  llm_chains.py  optimization.py
mlflow_assist/agents/: advanced_training.py  base.py  rl_agent.py  training.py
mlflow_assist/agents/environments/: __init__.py
mlflow_assist/cli/: cli.py
mlflow_assist/core/: model_manager.py
mlflow_assist/enterprise/: deployment.py  monetization.py  monitoring.py
mlflow_assist/llm/: llm_handler.py
mlflow_assist/utils/: helpers.py
test-project/: README.md  requirements.txt
